samples/_failures_safe/1761166541_a5ee6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75ab7ca3.c: In function ‘read_input_data’:
./samples/SAFE/__tmp_75ab7ca3.c:158:9: error: expected declaration or statement at end of input
  158 |         return 0;
      |         ^~~~~~
./samples/SAFE/__tmp_75ab7ca3.c:158:9: error: expected declaration or statement at end of input
